OPENIDM-7243 - Fix API descriptor footer to not overlap content

--- a/openidm-ui/openidm-ui-admin/src/main/resources/css/config/adminStyle.less
+++ b/openidm-ui/openidm-ui-admin/src/main/resources/css/config/adminStyle.less
@@ -922,10 +922,10 @@ Dialog Catch
 }
 
 .api-explorer-iframe {
-    position:fixed;
-    width:100%;
-    border:none;
-    height:75%;
+  width: 100%;
+  border: none;
+  min-height: 768px;
+  margin-bottom: 5px;
 }
 
 @media (max-width: 767px) {
